--- a/react-forms/package.json
+++ b/react-forms/package.json
@@ -13,9 +13,14 @@
     "prepare": "cd .. && husky install react-forms/.husky"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
