--- a/react-forms/package.json
+++ b/react-forms/package.json
@@ -13,6 +13,7 @@
     "prepare": "cd .. && husky install react-forms/.husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
